[package]
name = "fs-tree"
version = "0.5.5"
authors = ["João M. Bezerra <marcospb19@hotmail.com>"]
edition = "2021"
description = "Filesystem path Trie with an API focused on filesystem operations."
license = "MIT"
repository = "https://github.com/marcospb19/fs-tree"

[dependencies]
file_type_enum = "2.0.1"
libc = { version = "0.2.132", optional = true }
fs-err = { version = "3.0.0", optional = true }

[features]
fs-err = ["dep:fs-err"]
default = ["fs-err"]
libc-file-type = ["dep:libc"]

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.8.0"
